# computational_intelligence_2022_2023

./: .gitignore  LICENSE.md  README.md  Report.md
exam/: README.md  ga_2.ipynb  quarto.ipynb  quarto_failures.ipynb
exam/quarto/: objects.py
lab1/: README.md  lab1.ipynb  pyproject.toml
lab2/: README.md  lab2.ipynb  pyproject.toml
lab3/: README.md  lab3.ipynb
quarto/: README.md
quarto/quarto/: objects.py
