[tool.poetry]
name = "lab2"
version = "0.1.0"
description = ""
authors = ["FRANCESCO FIORELLA s303922 <s303922@studenti.polito.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
